--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,12 +13,14 @@ jobs:
         uses: actions/setup-ruby@v1
         with:
           ruby-version : 2.7
-      - name: Build
-        run: | 
-          gem install --no-document bundler rake-compiler
-          gem build narray-fromfile.gemspec
-          gem install narray-fromfile-*.gem
-          bundle install
+      - name: Install dependencies
+        run: bundle install
+      - name: Compile C
+        run: rake compile:fromfile
+      - name: build gem
+        run: gem build narray-fromfile.gemspec
+      - name: install gem
+        run: gem install narray-fromfile-*.gem
       - name: Test
         run: rake test
       
