--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Install dependencies
         run: bundle install
       - name: Compile C
-        run: rake compile:fromfile
+        run: bundle exec rake compile:fromfile
       - name: build gem
         run: gem build narray-fromfile.gemspec
       - name: install gem
